fix(sidebar): extract common z-index to constant

--- a/public/index.css
+++ b/public/index.css
@@ -19,7 +19,6 @@ iframe {
   height: 100%;
   border-width: 0 !important;
   background: transparent;
-  z-index: 9999;
   border: 0;
 }
 
