--- a/src/modules/sidebar/Sidebar/Sidebar.scss
+++ b/src/modules/sidebar/Sidebar/Sidebar.scss
@@ -19,7 +19,6 @@ iframe {
   height: 100%;
   border-width: 0 !important;
   background: transparent;
-  z-index: 9999;
   border: 0;
 }
 
@@ -48,7 +47,6 @@ body {
   bottom: 0;
   right: 0;
   width: 480px;
-  z-index: 9999;
   transition-property: width;
   transition-duration: 0.5s;
   transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
@@ -80,7 +78,6 @@ body {
 .insight-sidebar-close-button {
   border: 0;
   outline: 0;
-  z-index: 10000;
   cursor: pointer;
   position: absolute;
   display: flex;
